style.css
:root {
  --primary: #caecee;
  --accent: #95bdc2;
  --contrast: #646464;
  --faint: #cecece;
  --bright: #ffffff;

  --bar-height: 30px;
}


meter::-webkit-meter-bar {
  border-radius: 20px;
  background: var(--bright);
  border: none;
  height: var(--bar-height);
}
meter::-webkit-meter-optimum-value {
  background: var(--accent);
  height: var(--bar-height);
}


meter::-moz-meter-bar {
  -moz-appearance: meterchunk;
  border-radius: 20px;
  border: none;
  height: var(--bar-height);

}

meter:-moz-meter-optimum  {
  border-radius: 20px;
  background: var(--bright);
  height: var(--bar-height);
}


meter:-moz-meter-optimum::-moz-meter-bar  {
  border-radius: 20px;
  background: var(--accent);
}



img {
  border-radius: 10px;;
}

body {
  font-family: 'Quicksand', sans-serif;
  font-size: 24px;
  margin: 0;
  overflow: auto;
}

*::selection {
  background-color: var(--contrast);
  color: var(--bright);
}

ul {
  list-style-type: none;
  padding: 0;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Montserrat', sans-serif;
  letter-spacing: .5px;
  margin: 0;
  /*  */
}

p {
  margin: 0;
  /* text-indent: 50px; */
}

.summary {
  box-sizing: border-box;
  border-top: 1px var(--faint) solid;
  margin-top: 5px;
}

.blue {
  background: var(--primary);
  color: var(--contrast);
}

.container {
  width: 90%;
  max-width: 900px;
  margin: 0 auto;
  padding: 40px 0;
}

section#about .container > p::first-letter {
  font-weight: bold;
}

a {
  text-decoration: none;
  font-weight: bold;
  padding: 5px;
  color: var(--contrast);

  transition: background-color 200ms linear 0ms, 
  color 200ms linear 0ms;
}

a:visited {
  color: var(--contrast);

}

a:hover, a:visited:hover {
  color: var(--bright);
  background-color: var(--contrast);
  transition: background-color 200ms linear 0ms, 
              color 200ms linear 0ms;
  /* transition-property: background-color;
  transition-duration: 1000ms;
  transition-timing-function: linear;
  transition-delay: 0ms; */
}


/* .menu-link {
padding: 0 10px;
} */

.menu {
  font-weight: bold;
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* text-transform: uppercase;  */
}



ul li {
  display: inline;
}


#info {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

footer a:visited {
  color: var(--contrast);
}


footer {
  background: var(--accent);
  margin: 0px;
}

#footer-row {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

#contact {
  color: var(--bright);
}


.job {
  display: flex;
  margin-bottom: 16px;
}


/* Getting these right was tricky! */
 .job-col-left {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-end;
  min-width: 170px; /* see if there's a way to do this with grow and have them all be the same width */
  max-width: 170px;
} 

.job-col-right {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  border-left: 1px var(--faint) solid;
  padding-left: 10px;
}

.job-title {
  font-weight: bold;
}

.date {
  color:var(--accent);
  margin-right: 10px;
  font-weight: bold;
}

.company {
  margin-right: 10px;
  font-weight: bold;
  color: var(--contrast);
  font-size: 36px;
}



button {
  padding: 10px;
  border: 0;
}


#skills-container {
  display: flex;
  flex-direction: column;
  padding: 0;
  /* justify-content: space-between; */
}

.skill {
  display: flex;
  padding: 10px 0;
}

.skill-name {
  display: flex;
  min-width: 180px;
  justify-content: flex-end;
  margin-right: 10px;
}


@media only screen and (max-width: 650px) {
  #name-top {
    border-right: 1px var(--faint) solid;
    padding-right: 5px;
    margin-right: 13px;
  }
}

@media only screen and (max-width: 850px) {
  #name-bottom {
    border-right: 1px var(--faint) solid;
    padding-right: 5px;
    margin-right: 13px;
  }
}

